# sensor-net-nrf52810-firmware

./: Cargo.toml  Makefile  README.rst  memory.x
docs_src/: sensor-node-seq.diag
scripts/: gateway-sensor-deploy-release.sh  sensor-node-bl651-deploy.sh
src/common/: clock.rs  lib.rs  lsm303agr.rs  mmc5603nj.rs  p0.rs  power.rs  radio.rs  radio_2.rs  rng.rs  rng2.rs  rtc.rs  saadc.rs  sht3.rs  sht4x.rs  timer.rs  twim.rs  utils.rs
