[package]
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
edition = "2018"
readme = "README.md"
name = "sensor-net-nrf52810-firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.4"
cortex-m-rtic = "0.5.1"
nrf52810-pac = "0.9.0"
nrf52810-hal = { version="0.12", features = ["rt"] }

[lib]
name = "common"
path = "src/common/lib.rs"
test = false
bench = false

# this lets you use `cargo fix`!
[[bin]]
name = "sensor-net-gateway-bl651"
path = "src/bin/sensor-net-gateway-bl651.rs"
test = false
bench = false

[[bin]]
name = "personal-beacon"
path = "src/bin/personal-beacon.rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
